[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/MainMenuParallax.gd" type="Script" id=1]
[ext_resource path="res://scripts/MainMenuButtons.gd" type="Script" id=2]
[ext_resource path="res://assets/backmenu.jpg" type="Texture" id=3]
[ext_resource path="res://assets/HIROMISAKE.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 3
outline_color = Color( 0.109804, 0, 0.172549, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 40
outline_size = 3
outline_color = Color( 0.109804, 0, 0.172549, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 70
outline_size = 3
outline_color = Color( 0.219608, 0.0392157, 0.00784314, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 18
outline_size = 1
outline_color = Color( 0.4, 0.454902, 0.0156863, 1 )
use_filter = true
font_data = ExtResource( 4 )

[node name="MainMenu" type="ParallaxBackground"]
script = ExtResource( 1 )

[node name="MenuLayer" type="ParallaxLayer" parent="."]

[node name="Background" type="Sprite" parent="MenuLayer"]
position = Vector2( 1298, 298 )
scale = Vector2( 0.540833, 0.551852 )
texture = ExtResource( 3 )

[node name="Menu" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -511.5
margin_top = -298.0
margin_right = 511.5
margin_bottom = 298.0
script = ExtResource( 2 )

[node name="VBoxButtons" type="VBoxContainer" parent="Menu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -88.5
margin_top = -146.0
margin_right = 89.5

[node name="Play" type="Button" parent="Menu/VBoxButtons"]
margin_right = 178.0
margin_bottom = 47.0
custom_colors/font_color = Color( 0.0509804, 0.290196, 0.45098, 1 )
custom_fonts/font = SubResource( 1 )
text = "Play"
flat = true

[node name="Exit" type="Button" parent="Menu/VBoxButtons"]
margin_top = 51.0
margin_right = 178.0
margin_bottom = 98.0
custom_colors/font_color = Color( 0.0509804, 0.290196, 0.45098, 1 )
custom_fonts/font = SubResource( 2 )
text = "Exit"
flat = true

[node name="Title" type="Label" parent="Menu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -343.5
margin_top = 38.0
margin_right = 343.5
margin_bottom = 98.0
custom_colors/font_color = Color( 0.537255, 0.0235294, 0.0235294, 1 )
custom_fonts/font = SubResource( 3 )
text = "Samurai Warrior"
align = 1

[node name="SubTitle" type="Label" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -196.0
margin_top = -171.5
margin_right = 196.0
margin_bottom = -118.5
custom_colors/font_color = Color( 0.247059, 0.27451, 0.00392157, 1 )
custom_fonts/font = SubResource( 4 )
text = "by Lucas Villa (TP Final-Programaci√≥n 3)"
align = 1

[connection signal="pressed" from="Menu/VBoxButtons/Play" to="Menu" method="_on_Play_pressed"]
[connection signal="pressed" from="Menu/VBoxButtons/Exit" to="Menu" method="_on_Exit_pressed"]
